# rash-shell

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: ast.rs  builtins.rs  context.rs  environment.rs  eval.rs  exec.rs  grammar.lalrpop  lexer.rs  main.rs  parser.rs  process.rs
