[package]
name = "rash-shell"
version = "0.2.1"
edition = "2021"
authors = ["Brandon Bremen <bbremen@gmail.com>"]
categories = ["command-line-utilities"]
description = "A bourne-compatible shell inspired by dash"
exclude = [ "./.gitignore" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/absurdhero/rash-shell"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
lalrpop-util = "0.19.6"
regex = "1.5.4"
nix = "0.23.1"
rustyline = "9.1.2"

[[bin]]
name = "rash"
path = "src/main.rs"
