[package]
name = "rash-shell"
version = "0.2.2"
edition = "2021"
authors = ["Brandon Bremen <bbremen@gmail.com>"]
categories = ["command-line-utilities"]
description = "A bourne-compatible shell inspired by dash"
exclude = [ "./.gitignore" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/absurdhero/rash-shell"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
log = "0.4.22"
pretty_env_logger = "0.5.0"
lalrpop-util = "0.20.2"
regex = "1.10.5"
nix = { version = "0.29.0" , features=["fs", "process"]}
rustyline = "14.0.0"

[[bin]]
name = "rash"
path = "src/main.rs"
